fixing spacing issue

--- a/public/stylesheets/common/application.css
+++ b/public/stylesheets/common/application.css
@@ -121,7 +121,7 @@ label {
 }
 
 #gblContent {
-  padding:0 15px;
+  padding:0 25px;
 }
 
 #gblFooter {
