--- a/public/stylesheets/views/contact/index.css
+++ b/public/stylesheets/views/contact/index.css
@@ -1,6 +1,6 @@
 .contactRight {
   margin-left:380px;
-  padding-left:50px;
+  padding-left:60px;
   width:360px;
 }
 
